plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.7'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'back.code'
version = '0.0.1-SNAPSHOT'
description = 'modu_back'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    implementation 'org.apache.commons:commons-lang3:3.18.0'

    // QueryDSL 설정
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

    implementation 'org.qlrm:qlrm:4.0.1'
    implementation 'ch.simas.qlrm:qlrm:1.7.1'

    //유효성 체크를 위한 라이브러리
    implementation 'org.springframework.boot:spring-boot-starter-validation:3.5.5'
    implementation 'org.webjars.npm:axios:1.11.0'


    //이미지 리사이즈
    implementation 'com.jhlabs:filters:2.0.235-1'
    implementation 'com.mortennobel:java-image-scaling:0.8.6'

    implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'

    implementation (
            [group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'],
            [group: 'commons-io', name: 'commons-io', version: '2.20.0']
    )

    // JWT 설정
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    //json 라이브러리
    implementation 'org.json:json:20250517'

    implementation 'org.modelmapper:modelmapper:3.2.4'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'

    implementation 'com.jayway.jsonpath:json-path:2.9.0'
}

tasks.named('test') {
    useJUnitPlatform()
}
